WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287707
AX: Convert between DOM offsets and rendered-text offsets in ENABLE(AX_THREAD_TEXT_APIS) to avoid crashes and incorrect behavior
https://bugs.webkit.org/show_bug.cgi?id=287707
Summary
AX: Convert between DOM offsets and rendered-text offsets in ENABLE(AX_THREAD...
Tyler Wilcock
Reported
2025-02-14 10:06:33 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-14 10:06:48 PST
<
rdar://problem/144872799
>
Tyler Wilcock
Comment 2
2025-02-14 10:13:50 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40628
EWS
Comment 3
2025-02-15 09:52:18 PST
Committed
290443@main
(188abd709f1f): <
https://commits.webkit.org/290443@main
> Reviewed commits have been landed. Closing PR #40628 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug